# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../test_template.gni")
import("test_src_functionalext_supplement.gni")

group("functionalext_supplement_test") {
  testonly = true
  deps = []

  foreach(s, functionalext_supplement_list) {
    deps += [ "${s}" ]
  }
}

config("module_private_config") {
  visibility = [ ":*" ]
}

ohos_executable("musl_unittest") {
  testonly = true
  subsystem_name = "musl"
  part_name = "libc-gtest"

  sources = [
    "conf/conf_gtest/conf_confstr_test.cpp",
    "ctype/ctype_gtest/ctype_tolower_l_test.cpp",
    "ctype/ctype_gtest/ctype_toupper_l_test.cpp",
    "ctype/ctype_gtest/ctype_towctrans_l_test.cpp",
    "ctype/ctype_gtest/ctype_towupper_l_test.cpp",
    "ctype/ctype_gtest/ctype_towupper_test.cpp",
    "dirent/dirent_gtest/dirent_alphasort64_test.cpp",
    "exit/exit_gtest/exit_abort_test.cpp",
    "exit/exit_gtest/exit_assert_fail_test.cpp",
    "fcntl/fcntl_gtest/fcntl_posix_fadvise64_test.cpp",
    "fcntl/fcntl_gtest/fcntl_posix_fallocate64_test.cpp",
    "fortify/fortify_gtest/fortify_fgets_chk_test.cpp",
    "fortify/fortify_gtest/fortify_fwrite_chk_test.cpp",
    "fortify/fortify_gtest/fortify_memchr_chk_test.cpp",
    "fortify/fortify_gtest/fortify_memcpy_chk_test.cpp",
    "fortify/fortify_gtest/fortify_mempcpy_chk_test.cpp",
    "fortify/fortify_gtest/fortify_memrchr_chk_test.cpp",
    "fortify/fortify_gtest/fortify_open64_chk_test.cpp",
    "fortify/fortify_gtest/fortify_openat64_chk_test.cpp",
    "fortify/fortify_gtest/fortify_openat_chk_test.cpp",
    "fortify/fortify_gtest/fortify_poll_chk_test.cpp",
    "fortify/fortify_gtest/fortify_ppoll_chk_test.cpp",
    "fortify/fortify_gtest/fortify_pwrite_chk_test.cpp",
    "fortify/fortify_gtest/fortify_readlinkat_chk_test.cpp",
    "fortify/fortify_gtest/fortify_recv_chk_test.cpp",
    "fortify/fortify_gtest/fortify_sendto_chk_test.cpp",
    "fortify/fortify_gtest/fortify_snprintf_chk_test.cpp",
    "fortify/fortify_gtest/fortify_sprintf_chk_test.cpp",
    "fortify/fortify_gtest/fortify_stpcpy_chk_test.cpp",
    "fortify/fortify_gtest/fortify_strcat_chk_test.cpp",
    "fortify/fortify_gtest/fortify_strchr_chk_test.cpp",
    "fortify/fortify_gtest/fortify_strcpy_chk_test.cpp",
    "fortify/fortify_gtest/fortify_strlcat_chk_test.cpp",
    "fortify/fortify_gtest/fortify_strlcpy_chk_test.cpp",
    "fortify/fortify_gtest/fortify_strlen_chk_test.cpp",
    "fortify/fortify_gtest/fortify_strncpy_chk_test.cpp",
    "fortify/fortify_gtest/fortify_strrchr_chk_test.cpp",
    "fortify/fortify_gtest/fortify_umask_chk_test.cpp",
    "fortify/fortify_gtest/fortify_vsnprintf_chk_test.cpp",
    "fortify/fortify_gtest/fortify_vsprintf_chk_test.cpp",
    "legacy/legacy_gtest/legacy_endutent_test.cpp",
    "legacy/legacy_gtest/legacy_getutent_test.cpp",
    "legacy/legacy_gtest/legacy_utmpname_test.cpp",
    "linux/linux_gtest/linux_delete_module_test.cpp",
    "linux/linux_gtest/linux_init_module_test.cpp",
    "linux/linux_gtest/linux_pivot_root_test.cpp",
    "linux/linux_gtest/linux_umount2_test.cpp",
    "linux/linux_gtest/linux_unshare_test.cpp",
    "locale/locale_gtest/locale_catopen_test.cpp",
    "locale/locale_gtest/locale_duplocale_test.cpp",
    "math/math_gtest/complex_test.cpp",
    "math/math_gtest/math_acos_test.cpp",
    "math/math_gtest/math_acosh_test.cpp",
    "math/math_gtest/math_asin_test.cpp",
    "math/math_gtest/math_asinh_test.cpp",
    "math/math_gtest/math_atan2_test.cpp",
    "math/math_gtest/math_atan_test.cpp",
    "math/math_gtest/math_atanh_test.cpp",
    "math/math_gtest/math_cbrt_test.cpp",
    "math/math_gtest/math_ceil_test.cpp",
    "math/math_gtest/math_copysign_test.cpp",
    "math/math_gtest/math_cos_test.cpp",
    "math/math_gtest/math_cosh_test.cpp",
    "math/math_gtest/math_data_test.cpp",
    "math/math_gtest/math_drem_test.cpp",
    "math/math_gtest/math_erf_test.cpp",
    "math/math_gtest/math_erfc_test.cpp",
    "math/math_gtest/math_exp2_test.cpp",
    "math/math_gtest/math_exp_test.cpp",
    "math/math_gtest/math_expm1_test.cpp",
    "math/math_gtest/math_fabs_test.cpp",
    "math/math_gtest/math_fdim_test.cpp",
    "math/math_gtest/math_finite_test.cpp",
    "math/math_gtest/math_floor_test.cpp",
    "math/math_gtest/math_fma_test.cpp",
    "math/math_gtest/math_fmax_test.cpp",
    "math/math_gtest/math_fmin_test.cpp",
    "math/math_gtest/math_fmod_test.cpp",
    "math/math_gtest/math_frexp_test.cpp",
    "math/math_gtest/math_hypot_test.cpp",
    "math/math_gtest/math_ilogb_test.cpp",
    "math/math_gtest/math_j0_test.cpp",
    "math/math_gtest/math_j1_test.cpp",
    "math/math_gtest/math_jn_test.cpp",
    "math/math_gtest/math_ldexp_test.cpp",
    "math/math_gtest/math_lgamma_r_test.cpp",
    "math/math_gtest/math_lgamma_test.cpp",
    "math/math_gtest/math_llrint_test.cpp",
    "math/math_gtest/math_log10_test.cpp",
    "math/math_gtest/math_log1p_test.cpp",
    "math/math_gtest/math_log2_test.cpp",
    "math/math_gtest/math_log_test.cpp",
    "math/math_gtest/math_logb_test.cpp",
    "math/math_gtest/math_lrint_test.cpp",
    "math/math_gtest/math_modf_test.cpp",
    "math/math_gtest/math_nearbyint_test.cpp",
    "math/math_gtest/math_nextafter_test.cpp",
    "math/math_gtest/math_nexttoward_test.cpp",
    "math/math_gtest/math_pow_test.cpp",
    "math/math_gtest/math_remainder_test.cpp",
    "math/math_gtest/math_remquo_test.cpp",
    "math/math_gtest/math_rint_test.cpp",
    "math/math_gtest/math_round_test.cpp",
    "math/math_gtest/math_scalb_test.cpp",
    "math/math_gtest/math_scalbn_test.cpp",
    "math/math_gtest/math_signbit_test.cpp",
    "math/math_gtest/math_significand_test.cpp",
    "math/math_gtest/math_sin_test.cpp",
    "math/math_gtest/math_sincos_test.cpp",
    "math/math_gtest/math_sinh_test.cpp",
    "math/math_gtest/math_sqrt_test.cpp",
    "math/math_gtest/math_tan_test.cpp",
    "math/math_gtest/math_tanh_test.cpp",
    "math/math_gtest/math_tgamma_test.cpp",
    "math/math_gtest/math_trunc_test.cpp",
    "math/math_gtest/math_y0_test.cpp",
    "math/math_gtest/math_y1_test.cpp",
    "math/math_gtest/math_yn_test.cpp",
    "misc/misc_gtest/misc_basename_test.cpp",
    "misc/misc_gtest/misc_closelog_test.cpp",
    "misc/misc_gtest/misc_dirname_test.cpp",
    "misc/misc_gtest/misc_nftw64_test.cpp",
    "misc/misc_gtest/misc_openlog_test.cpp",
    "network/network_gtest/network_herror_test.cpp",
    "network/network_gtest/network_res_search_test.cpp",
    "passwd/passwd_gtest/passwd_endgrent_test.cpp",
    "process/process_gtest/process_unsetenv_test.cpp",
    "regex/regex_gtest/regex_fnmatch_test.cpp",
    "search/search_gtest/search_tdelete_test.cpp",
    "search/search_gtest/search_tfind_test.cpp",
    "stat/stat_gtest/stat_fstat64_test.cpp",
    "stat/stat_gtest/stat_fstatat64_test.cpp",
    "stat/stat_gtest/stat_fstatfs64_test.cpp",
    "stdio/stdio_gtest/stdio_clearerr_unlocked_test.cpp",
    "stdio/stdio_gtest/stdio_feof_unlocked_test.cpp",
    "stdio/stdio_gtest/stdio_ferror_test.cpp",
    "stdio/stdio_gtest/stdio_ferror_unlocked_test.cpp",
    "stdio/stdio_gtest/stdio_fflush_unlocked_test.cpp",
    "stdio/stdio_gtest/stdio_fgetpos64_test.cpp",
    "stdio/stdio_gtest/stdio_fileno_unlocked_test.cpp",
    "stdio/stdio_gtest/stdio_fpurge_test.cpp",
    "stdio/stdio_gtest/stdio_fputc_unlocked_test.cpp",
    "stdio/stdio_gtest/stdio_fsetlocking_test.cpp",
    "stdio/stdio_gtest/stdio_gets_test.cpp",
    "stdio/stdio_gtest/stdio_getwchar_test.cpp",
    "stdio/stdio_gtest/stdio_perror_test.cpp",
    "stdlib/stdlib_gtest/stdlib_arc4random_test.cpp",
    "stdlib/stdlib_gtest/stdlib_div_test.cpp",
    "string/string_gtest/string_bcopy_test.cpp",
    "temp/temp_gtest/temp_mkostemp64_test.cpp",
    "temp/temp_gtest/temp_mkstemp64_test.cpp",
    "temp/temp_gtest/temp_mkstemps64_test.cpp",
    "time/time_gtest/time_daylight_test.cpp",
    "time/time_gtest/time_ftime_test.cpp",
    "time/time_gtest/time_timezone_test.cpp",
    "time/time_gtest/time_tzname_test.cpp",
    "time/time_gtest/time_tzset_test.cpp",
    "unistd/unistd_gtest/unistd_dup2_test.cpp",
  ]

  include_dirs = [ "//third_party/musl" ]
  configs = [ ":module_private_config" ]

  deps = [ "//third_party/googletest:gtest_main" ]
}
