# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../test_template.gni")
import("test_src_functionalext_supplement.gni")

group("functionalext_supplement_test") {
  testonly = true
  deps = []

  foreach(s, functionalext_supplement_list) {
    deps += [ "${s}" ]
  }
}

config("module_private_config") {
  visibility = [ ":*" ]
}

ohos_executable("musl_unittest") {
  testonly = true
  subsystem_name = "musl"
  part_name = "libc-gtest"

  sources = [
    # ldso unittest
    "ldso/ldso_gtest/ldso_cfi_test.cpp",
    "ldso/ldso_gtest/ldso_dl_iterate_phdr_test.cpp",
    "ldso/ldso_gtest/ldso_dladdr_test.cpp",
    "ldso/ldso_gtest/ldso_dlclose_test.cpp",
    "ldso/ldso_gtest/ldso_dlerror_test.cpp",
    "ldso/ldso_gtest/ldso_dlns_create_test.cpp",
    "ldso/ldso_gtest/ldso_dlns_inherit_test.cpp",
    "ldso/ldso_gtest/ldso_dlopen_ext_test.cpp",
    "ldso/ldso_gtest/ldso_dlopen_ns_test.cpp",
    "ldso/ldso_gtest/ldso_dlopen_test.cpp",
    "ldso/ldso_gtest/ldso_dlsym_test.cpp",

    # math unittest
    "math/math_gtest/complex_test.cpp",
    "math/math_gtest/math_acos_test.cpp",
    "math/math_gtest/math_acosh_test.cpp",
    "math/math_gtest/math_asin_test.cpp",
    "math/math_gtest/math_asinh_test.cpp",
    "math/math_gtest/math_atan2_test.cpp",
    "math/math_gtest/math_atan_test.cpp",
    "math/math_gtest/math_atanh_test.cpp",
    "math/math_gtest/math_cbrt_test.cpp",
    "math/math_gtest/math_ceil_test.cpp",
    "math/math_gtest/math_copysign_test.cpp",
    "math/math_gtest/math_cos_test.cpp",
    "math/math_gtest/math_cosh_test.cpp",
    "math/math_gtest/math_data_test.cpp",
    "math/math_gtest/math_drem_test.cpp",
    "math/math_gtest/math_erf_test.cpp",
    "math/math_gtest/math_erfc_test.cpp",
    "math/math_gtest/math_exp2_test.cpp",
    "math/math_gtest/math_exp_test.cpp",
    "math/math_gtest/math_expm1_test.cpp",
    "math/math_gtest/math_fabs_test.cpp",
    "math/math_gtest/math_fdim_test.cpp",
    "math/math_gtest/math_finite_test.cpp",
    "math/math_gtest/math_floor_test.cpp",
    "math/math_gtest/math_fma_test.cpp",
    "math/math_gtest/math_fmax_test.cpp",
    "math/math_gtest/math_fmin_test.cpp",
    "math/math_gtest/math_fmod_test.cpp",
    "math/math_gtest/math_frexp_test.cpp",
    "math/math_gtest/math_hypot_test.cpp",
    "math/math_gtest/math_ilogb_test.cpp",
    "math/math_gtest/math_j0_test.cpp",
    "math/math_gtest/math_j1_test.cpp",
    "math/math_gtest/math_jn_test.cpp",
    "math/math_gtest/math_ldexp_test.cpp",
    "math/math_gtest/math_lgamma_r_test.cpp",
    "math/math_gtest/math_lgamma_test.cpp",
    "math/math_gtest/math_llrint_test.cpp",
    "math/math_gtest/math_log10_test.cpp",
    "math/math_gtest/math_log1p_test.cpp",
    "math/math_gtest/math_log2_test.cpp",
    "math/math_gtest/math_log_test.cpp",
    "math/math_gtest/math_logb_test.cpp",
    "math/math_gtest/math_lrint_test.cpp",
    "math/math_gtest/math_modf_test.cpp",
    "math/math_gtest/math_nearbyint_test.cpp",
    "math/math_gtest/math_nextafter_test.cpp",
    "math/math_gtest/math_nexttoward_test.cpp",
    "math/math_gtest/math_pow_test.cpp",
    "math/math_gtest/math_remainder_test.cpp",
    "math/math_gtest/math_remquo_test.cpp",
    "math/math_gtest/math_rint_test.cpp",
    "math/math_gtest/math_round_test.cpp",
    "math/math_gtest/math_scalb_test.cpp",
    "math/math_gtest/math_scalbn_test.cpp",
    "math/math_gtest/math_signbit_test.cpp",
    "math/math_gtest/math_significand_test.cpp",
    "math/math_gtest/math_sin_test.cpp",
    "math/math_gtest/math_sincos_test.cpp",
    "math/math_gtest/math_sinh_test.cpp",
    "math/math_gtest/math_sqrt_test.cpp",
    "math/math_gtest/math_tan_test.cpp",
    "math/math_gtest/math_tanh_test.cpp",
    "math/math_gtest/math_tgamma_test.cpp",
    "math/math_gtest/math_trunc_test.cpp",
    "math/math_gtest/math_y0_test.cpp",
    "math/math_gtest/math_y1_test.cpp",
    "math/math_gtest/math_yn_test.cpp",
    "network/network_gtest/arpa_inet_test.cpp",
    "network/network_gtest/endian_test.cpp",
    "network/network_gtest/fortify_test.cpp",
    "network/network_gtest/net_if_test.cpp",
    "network/network_gtest/netdb_test.cpp",
    "network/network_gtest/netinet_ether_test.cpp",
    "network/network_gtest/resolv_test.cpp",
    "network/network_gtest/socket_test.cpp",
    "thread/thread_gtest/pthread_attr_test.cpp",
    "thread/thread_gtest/pthread_barrier_test.cpp",
    "thread/thread_gtest/pthread_cleanup_test.cpp",
    "thread/thread_gtest/pthread_cond_test.cpp",
    "thread/thread_gtest/pthread_key_test.cpp",
    "thread/thread_gtest/pthread_spin_test.cpp",
    "thread/thread_gtest/thread_callonce_test.cpp",
    "thread/thread_gtest/thread_cnd_test.cpp",
    "thread/thread_gtest/thread_mutex_test.cpp",
    "thread/thread_gtest/thread_mutexattr_test.cpp",
    "thread/thread_gtest/thread_pthrd_test.cpp",
    "thread/thread_gtest/thread_rwlock_test.cpp",
    "thread/thread_gtest/thread_sem_test.cpp",
    "thread/thread_gtest/thread_thrd_test.cpp",
    "thread/thread_gtest/thread_tls_get_addr_test.cpp",
    "thread/thread_gtest/thread_tss_test.cpp",
    "time/time_gtest/sys_clock_test.cpp",
    "time/time_gtest/time_test.cpp",
    "time/time_gtest/timer_test.cpp",
  ]

  ldflags = [
    "-Wl,-rpath=/data/tmp/libcgtest/libs:/data/tmp/libcgtest/libs/rpath-test/",
  ]

  include_dirs = [ "//third_party/musl" ]
  configs = [ ":module_private_config" ]

  if (use_pthread_cancel) {
    cflags += [ "-DFEATURE_PTHREAD_CANCEL" ]
  }
  deps = [ "//third_party/googletest:gtest_main" ]
}
