# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../test_template.gni")
import("test_src_functionalext_time.gni")

foreach(s, functionalext_time_test) {
  test_unittest(s) {
    target_dir = "functionalext/time"
  }
}

ohos_executable("mktime_noenv") {
  subsystem_name = "musl"
  part_name = "libc-test"

  sources = [ "mktime_noenv.c" ]

  include_dirs = [
    "//third_party/musl/libc-test/src/common",
    "//third_party/musl/libc-test/src/functionalext/common",
    "//third_party/musl/porting/linux/user/src",
    "//third_party/musl/porting/linux/user/include",
    "//third_party/musl/libc-test/src/functionalext/hilog",
  ]

  configs = [ "//third_party/musl/libc-test/src/common:config_runtest" ]

  defines = [ "OHOS_ENABLE_PARAMETER" ]

  deps = [ "//third_party/musl:create_porting_src" ]
  external_deps = [ "init:parameterbase" ]
}

group("functionalext_time_test") {
  testonly = true
  deps = []
  foreach(s, functionalext_time_test) {
    deps += [ ":${s}" ]
  }
  deps += [ ":mktime_noenv" ]
}
